--- a/index.html
+++ b/index.html
@@ -40,14 +40,17 @@
    <section class="benefits">
      <ul class="container">
        <li class="one-third">
+       <i class="fa fa-file-o"></i>
          <h2>Create notes</h2>
          <p>Using Markdown, you can create simple text-based documents to save and share. You can collaborate with others to write and edit content.</p>
        </li>
        <li class="one-third">
+        <i class="fa fa-picture-o"></i>
          <h2>Save images</h2>
          <p>Are there images you find interesting enough to save? Now you have a way to organize and store those within blocbox.</p>
        </li>
        <li class="one-third">
+       <i class="fa fa-link"></i>
          <h2>Add links</h2>
          <p>Forget bookmarking sites in your browser. With blocbox, you can add links, group them and view them from any computer.</p>
        </li>
@@ -98,6 +101,9 @@
         </ul>
         <a href="signup.html" class="btn">Start Your Free Trial!</a>
       </div>
+      <div class="container">
+   <p class="small">*We will not collect your credit card information until your 30-day trial has ended.</p>
+ </div>
     </li>
    </ul>
    
@@ -116,7 +122,7 @@
        <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
        <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
      </li>
-      <li class="one-fourth">
+      <li class="one-fourth door">
     <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
     </blockquote>
     <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
@@ -128,7 +134,8 @@
     <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
     <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
   </li>
-  <li class="one-fourth">
+  <li class="one-fourth door">
+  <i class="stagger">
     <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
     </blockquote>
     <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
