--- a/dashboard.html
+++ b/dashboard.html
@@ -70,7 +70,7 @@
        <div class="content-item">
          <div class="item-box">
          <h2><img class="favicon" src="https://www.airbnb.com/favicon.ico"> <a href="#">airbnb.com</a></h2>
-+        <p>Vacation Rentals, Homes, Apartments &amp; Rooms for Rent &mdash; Airbnb</p>
++        <p>Vacation Rentals, Homes, Apartments &amp; Rooms for Rent &mdash; Airbnb.</p>
          </div>
        </div>
        <div class="content-item">
