--- a/dashboard.html
+++ b/dashboard.html
@@ -42,16 +42,16 @@
        <div class="settings">
      <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
      <p>Joey Kirk</p>
-          <ul class="menu">
-            <li>
-              <a href="#"><i class="fa fa-cog"></i></a>
-              <ul>
-                  <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
-                  <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
-                  <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
-              </ul>
-            </li>
+      <ul class="menu menu--bottom">
+        <li>
+          <a href="#"><i class="fa fa-cog"></i></a>
+          <ul>
+              <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
+              <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
+              <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
           </ul>
+        </li>
+      </ul>
      
    </div>
    </nav>
@@ -140,12 +140,8 @@
    <script src="js/dropit.js"></script>
    <script type="text/javascript">
      $(".menu").dropit();
-	 $( "#menu" ).click(function() {
-         $("#left-nav").toggleClass("open", 200);
-     });
-	  $(".menu").dropit2();
-	 $( "#menu" ).click(function() {
-         $("#left-nav").toggleClass("open", 200);
+	   $( "#menu" ).click(function() {
+       $("#left-nav").toggleClass("open", 200);
      });
    </script>
  </body>
